--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">MangaReader</string>
-    <string name="action_settings">Settings</string>
 
     <string name="title_activity_chapter_view">ChapterView</string>
+    <string name="search">Search</string>
+    <string name="filter">Filter</string>
+    <string name="menu_about">About</string>
 </resources>
