--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,12 +2,11 @@
 <resources>
     <string name="app_name">MangaReader</string>
     <string name="bookmarks">Закладки</string>
-    <string name="filter"></string>
+    <string name="filter">Фильтр</string>
     <string name="menu_about">О приложении</string>
     <string name="search">Поиск</string>
     <string name="search_hint">Поиск</string>
     <string name="popular">Популярное</string>
     <string name="settings">Настройки</string>
-    <string name="title_activity_chapter_view"></string>
     <string name="action_settings">Настройки</string>
 </resources>
