--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
     <string name="app_name">MangaReader</string>
 
-    <string name="title_activity_chapter_view">ChapterView</string>
+    <string name="title_activity_chapter_view" translatable="false">ChapterView</string>
     <string name="search">Search</string>
     <string name="filter">Filter</string>
     <string name="menu_about">About</string>
     <string name="search_hint">Search</string>
-    <string name="title_activity_manga">MangaActivity</string>
+    <string name="title_activity_manga" translatable="false">MangaActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="popular">Popular</string>
     <string name="bookmarks">Bookmarks</string>
     <string name="settings">Settings</string>
