--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,5 @@
     <string name="popular">Популярное</string>
     <string name="settings">Настройки</string>
     <string name="action_settings">Настройки</string>
+    <string name="manga_cover">Обложка манги</string>
 </resources>
