--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,5 @@
     <string name="settings">Настройки</string>
     <string name="action_settings">Настройки</string>
     <string name="manga_cover">Обложка манги</string>
+    <string name="pick_manga_source">Выберите источник</string>
 </resources>
