--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="bookmarks">Bookmarks</string>
     <string name="settings">Settings</string>
     <string name="manga_cover">Manga cover</string>
+    <string name="pick_manga_source">Pick manga source</string>
 </resources>
