--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="settings">Settings</string>
     <string name="manga_cover">Manga cover</string>
     <string name="pick_manga_source">Pick manga source</string>
+    <string name="new_chapter_notification">New chapter</string>
 </resources>
