--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="popular">Popular</string>
     <string name="bookmarks">Bookmarks</string>
+    <string name="add_bookmark">Add bookmark</string>
+    <string name="remove_bookmark">Remove bookmark</string>
     <string name="settings">Settings</string>
     <string name="manga_cover">Manga cover</string>
     <string name="pick_manga_source">Pick manga source</string>
